--- a/GameInWINAPI/GameInWINAPI.vcxproj
+++ b/GameInWINAPI/GameInWINAPI.vcxproj
@@ -23,7 +23,7 @@
     <ProjectGuid>{84BA9599-1741-44FA-B847-01FB91977CC2}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>GameInWINAPI</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.15063.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.14393.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -138,19 +138,24 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="BaseObject.h" />
     <ClInclude Include="CSpriteDib.h" />
+    <ClInclude Include="DefineEnum.h" />
     <ClInclude Include="FrameCheck.h" />
     <ClInclude Include="GameInWINAPI.h" />
+    <ClInclude Include="Player.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="CScreenDib.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="BaseObject.cpp" />
     <ClCompile Include="CSpriteDib.cpp" />
     <ClCompile Include="FrameCheck.cpp" />
     <ClCompile Include="GameInWINAPI.cpp" />
     <ClCompile Include="CScreenDib.cpp" />
+    <ClCompile Include="Player.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
