--- a/GameInWINAPI/GameInWINAPI.vcxproj
+++ b/GameInWINAPI/GameInWINAPI.vcxproj
@@ -147,6 +147,7 @@
     <ClInclude Include="GameOverScene.h" />
     <ClInclude Include="InGameScene.h" />
     <ClInclude Include="Player.h" />
+    <ClInclude Include="Protocol.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="CScreenDib.h" />
     <ClInclude Include="Scene.h" />
@@ -165,6 +166,7 @@
     <ClCompile Include="GameOverScene.cpp" />
     <ClCompile Include="InGameScene.cpp" />
     <ClCompile Include="Player.cpp" />
+    <ClCompile Include="Protocol.cpp" />
     <ClCompile Include="Scene.cpp" />
     <ClCompile Include="SceneManager.cpp" />
     <ClCompile Include="stdafx.cpp">
