--- a/GameInWINAPI/GameInWINAPI.vcxproj.filters
+++ b/GameInWINAPI/GameInWINAPI.vcxproj.filters
@@ -84,6 +84,9 @@
     <ClInclude Include="SceneManager.h">
       <Filter>헤더 파일\Managers</Filter>
     </ClInclude>
+    <ClInclude Include="Protocol.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -124,6 +127,9 @@
     </ClCompile>
     <ClCompile Include="TitleScene.cpp">
       <Filter>소스 파일\Scenes</Filter>
+    </ClCompile>
+    <ClCompile Include="Protocol.cpp">
+      <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
